# jigsaw

./: .gitignore  CHANGELOG.md  KULLANIM.txt  README.md  pyproject.toml
.github/workflows/: build-windows.yml
captures/pickup_0000/: meta.json
captures/pickup_0001/: meta.json
captures/pickup_0002/: meta.json
captures/pickup_0003/: meta.json
captures/pickup_0004/: meta.json
captures/pickup_0005/: meta.json
captures/pickup_0006/: meta.json
captures/pickup_0007/: meta.json
captures/pickup_0008/: meta.json
captures/pickup_0009/: meta.json
captures/pickup_0010/: meta.json
captures/pickup_0011/: meta.json
captures/pickup_0012/: meta.json
captures/pickup_0013/: meta.json
captures/pickup_0014/: meta.json
captures/pickup_0015/: meta.json
captures/pickup_0016/: meta.json
captures/pickup_0017/: meta.json
captures/pickup_0018/: meta.json
captures/pickup_0019/: meta.json
captures/pickup_0020/: meta.json
puzzle_assistant/: __init__.py  gui.py  main.py
scripts/: build_exe.ps1  build_linux.sh  eval_matcher.py  label_pickups.py  probe_shape.py  verify_captures.py  verify_grid.py
tests/: test_assignment.py  test_board_detector.py  test_border_pieces.py  test_filter_sink.py  test_flat_edge.py  test_grid_detector.py  test_hole_shape.py  test_init_view_watcher.py  test_main_loop.py  test_matching.py  test_mouse_hook.py  test_overlay.py  test_reference_panel.py  test_seam_match.py  test_segmentation.py  test_smoke.py  test_state_machine.py  test_target_map.py  test_thresholds.py  test_title_match.py  test_window_capture.py
(+1499 files in other folders)
